vlib/v/checker/tests/assert_optional_err.vv
import os

fn main(){
	assert os.truncate("testfile.txt", 6666) or { panic(err) }
}
